--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
 .admin-navbar {
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   height: 60px;
   display: flex;
   justify-content: start;
@@ -17,12 +17,12 @@
   background: none;
 }
 
-.userNav{
-  background-color: #6C63FF;
+.userNav {
+  background-color: #6c63ff;
 }
 
 .nav-menu {
-  background-color: #6C63FF;
+  background-color: #6c63ff;
   width: 220px;
   height: 100vh;
   display: flex;
@@ -63,9 +63,13 @@
   background-color: #a09bfd;
 }
 
-.user-nav-link{
+.user-nav-link {
   color: #ffff;
   padding: 5px;
+  text-decoration: none;
+}
+.user-nav-link:hover {
+  color: #ffff;
   text-decoration: none;
 }
 
@@ -73,13 +77,15 @@
   width: 100%;
 }
 
-.navbar-toggle {
-  background-color: #6C63FF;
-  width: 100%;
-  height: 80px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
+.userInfoContainer {
+  position: absolute;
+  background-color: white;
+  z-index: 1;
+  border-radius: 5px;
+  top: 58px;
+  right: 80px;
+  width: 200px;
+  box-shadow: 2px 2px 5px 2px #d8d8d8;
 }
 
 span {
@@ -92,8 +98,7 @@ span {
   position: fixed;
   margin: 0px;
   width: 100%;
- 
 }
-.navbar{
+.navbar {
   z-index: 100;
 }
